--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 DATABASE_URL="sqlite:///../movies_project.db"
-SECRET_KEY="the_best_movie_is_Th3_N0t3Bo0k"
-ALGORITHM="HS256"
-ACCESS_TOKEN_EXPIRE_MINUTES=90
+SECRET_KEY=""
+ALGORITHM=""
+ACCESS_TOKEN_EXPIRE_MINUTES=
+REPOSITORY_TYPE=""
