--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,8 @@
-DATABASE_URL="sqlite:///../movies_project.db"
+SQL_DATABASE_URL=""
 SECRET_KEY=""
-ALGORITHM=""
-ACCESS_TOKEN_EXPIRE_MINUTES=
+ALGORITHM="HS256"
+ACCESS_TOKEN_EXPIRE_MINUTES=90
+MONGO_DATABASE_URL="mongodb://localhost:27017"
+MONGO_DB_NAME=""
 REPOSITORY_TYPE=""
+IS_TEST=False
